--- a/package.json
+++ b/package.json
@@ -97,6 +97,9 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
+    "dev": "node --openssl-legacy-provider scripts/start.js",
+    "dev:inspect": "node --inspect scripts/start.js",
+    "dev:inspect-brk": "node --inspect-brk scripts/start.js",
     "eslint": "eslint ./src/**/*.{js,jsx,ts,tsx}",
     "stylelint": "stylelint ./src/**/*.{css,less,scss,sass}",
     "predeploy": "yarn run build",
