--- a/package.json
+++ b/package.json
@@ -91,7 +91,10 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "autoprefixer": "^9.8.6",
+    "gh-pages": "^3.1.0",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "scripts": {
     "start": "node scripts/start.js",
