--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "build": "node --openssl-legacy-provider scripts/build.js",
     "test": "node scripts/test.js",
     "dev": "node --openssl-legacy-provider scripts/start.js",
     "dev:inspect": "node --inspect scripts/start.js",
