--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.8.4",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -64,8 +67,6 @@
     "react-app-polyfill": "^1.0.6",
     "react-country-flag": "^2.2.0",
     "react-dev-utils": "^10.2.0",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^16.13.0",
     "react-intl": "^5.0.2",
     "react-joyride": "^2.2.1",
