--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
-    "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -21,18 +20,14 @@
     "antd": "^4.0.3",
     "babel-eslint": "10.0.3",
     "babel-jest": "^24.9.0",
-    "babel-loader": "8.0.6",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.1",
     "camelcase": "^5.3.1",
-    "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-react-app": "^5.2.0",
-    "eslint-loader": "3.0.3",
     "eslint-plugin-flowtype": "4.6.0",
     "eslint-plugin-import": "2.20.0",
     "eslint-plugin-jest": "^23.8.2",
@@ -40,33 +35,19 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "7.18.0",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "4.3.0",
-    "firebase": "^7.16.0",
-    "fs-extra": "^8.1.0",
-    "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "less": "^3.11.1",
-    "less-loader": "^5.0.0",
     "lodash.debounce": "^4.0.8",
-    "mini-css-extract-plugin": "0.9.0",
     "moment": "^2.27.0",
     "netlify-cli": "^2.58.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.6.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
-    "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-app-polyfill": "^1.0.6",
     "react-country-flag": "^2.2.0",
-    "react-dev-utils": "^10.2.0",
     "react-dom": "^16.13.0",
     "react-intl": "^5.0.2",
     "react-joyride": "^2.2.1",
@@ -76,38 +57,28 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
-    "resolve": "1.15.0",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
     "save": "^2.4.0",
     "semver": "6.3.0",
-    "style-loader": "^1.1.3",
-    "terser-webpack-plugin": "2.3.4",
-    "ts-pnp": "1.1.5",
-    "typescript": "^3.8.3",
-    "url-loader": "2.3.0",
-    "webpack": "4.41.5",
-    "webpack-dev-server": "3.10.2",
-    "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^9.8.6",
     "gh-pages": "^3.1.0",
     "postcss": "^7.0.39",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
+    "vite": "^7.1.11"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node --openssl-legacy-provider scripts/build.js",
-    "test": "node scripts/test.js",
-    "dev": "node --openssl-legacy-provider scripts/start.js",
-    "dev:inspect": "node --inspect scripts/start.js",
-    "dev:inspect-brk": "node --inspect-brk scripts/start.js",
+    "dev": "vite",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "jest",
     "eslint": "eslint ./src/**/*.{js,jsx,ts,tsx}",
     "stylelint": "stylelint ./src/**/*.{css,less,scss,sass}",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -142,9 +113,7 @@
     ],
     "testEnvironment": "jest-environment-jsdom-fourteen",
     "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest"
     },
     "transformIgnorePatterns": [
       "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
@@ -153,7 +122,9 @@
     "modulePaths": [],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+      "^.+\\.module\\.(css|sass|scss|less)$": "identity-obj-proxy",
+      "\\.(css|sass|scss|less)$": "<rootDir>/test/styleMock.js",
+      "\\.(gif|ttf|eot|svg|png|jpg|jpeg|webp)$": "<rootDir>/test/fileMock.js"
     },
     "moduleFileExtensions": [
       "web.js",
